<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@mipmap/ic_mail_outline_black_24dp"
            android:title="@string/drawer_menu_message" />
        <item
            android:id="@+id/nav_route"
            android:icon="@mipmap/ic_timeline_black_24dp"
            android:title="@string/drawer_menu_route" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/drawer_menu_history" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@mipmap/ic_favorite_border_black_24dp"
            android:title="@string/drawer_menu_favorite" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@mipmap/ic_lightbulb_outline_black_24dp"
            android:title="@string/drawer_menu_draft" />
    </group>

    <item android:title="@string/drawer_menu_group_options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/drawer_menu_settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:title="@string/drawer_menu_exit" />
        </menu>
    </item>

</menu>
